Basic add functionality
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,7 @@
         <attr name="popupItemBackground" format="dimension" />
         <attr name="photoItemForeground" format="dimension" />
     </declare-styleable>
+    <declare-styleable name="ThemeIOSched">
+        <attr name="isFloatingWindow" format="boolean" />
+    </declare-styleable>
 </resources>
