--- a/app/src/main/res/menu/edit_feed.xml
+++ b/app/src/main/res/menu/edit_feed.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.nononsenseapps.feeder.ui.StoryActivity" >
+    tools:context="com.nononsenseapps.feeder.ui.EditFeedActivity" >
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
