--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -59,7 +59,7 @@
         <item name="photoItemForeground">?android:selectableItemBackground</item>
 
         <item name="android:windowContentOverlay">@null</item>
-        <!--<item name="android:windowBackground">@android:color/white</item>-->
+        <item name="android:windowBackground">@color/background_material_dark</item>
         <item name="android:actionBarStyle">@style/ActionBar</item>
         <item name="android:homeAsUpIndicator">@drawable/ic_up</item>
 
@@ -102,7 +102,7 @@
     </style>
 
     <style name="TextAppearance.LargePopupMenu" parent="FrameworkRoot.TextAppearance.Widget.PopupMenu.Large">
-        <item name="android:textColor">@android:color/primary_text_dark</item>
+        <item name="android:textColor">@color/primary_text_default_material_dark</item>
     </style>
 
 
@@ -131,13 +131,13 @@
     <style name="TextAppearance.BigTitle">
         <item name="android:textSize">24sp</item>
         <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textColor">@android:color/primary_text_dark</item>
+        <item name="android:textColor">@color/primary_text_default_material_dark</item>
     </style>
 
     <style name="TextAppearance.Title">
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textColor">@android:color/primary_text_dark</item>
+        <item name="android:textColor">@color/primary_text_default_material_dark</item>
     </style>
 
     <style name="TextAppearance.Subhead"
@@ -147,7 +147,7 @@
     <style name="TextAppearance.Body">
     <item name="android:textSize">14sp</item>
     <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textColor">@android:color/tertiary_text_dark</item>
+        <item name="android:textColor">@color/tertiary_text_material_dark</item>
     </style>
 
 </resources>
