--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,9 @@
     <style name="FeedsTheme" parent="AppTheme" >
         <item name="android:windowActionBarOverlay">true</item>
     </style>
+    <style name="ReaderTheme" parent="AppTheme" >
+        <item name="android:windowActionBarOverlay">false</item>
+    </style>
     <style name="EditFeedTheme" parent="AppTheme" >
         <item name="isFloatingWindow">true</item>
         <item name="android:windowContentOverlay">@null</item>
@@ -149,5 +152,17 @@
     <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/tertiary_text_material_dark</item>
     </style>
+
+    <style name="TextAppearance.Reader"/>
+    <style name="TextAppearance.Reader.Title">
+        <item name="android:textColor">@color/white_54</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+    </style>
+    <style name="TextAppearance.Reader.Body">
+        <item name="android:textColor">@color/white_87</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">sans-serif</item>
+        </style>
 
 </resources>
