--- a/app/src/main/res/anim/to_bottom_right.xml
+++ b/app/src/main/res/anim/to_bottom_right.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!-- Animate a window to disappear towards the bottom right. -->
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-     android:interpolator="@android:anim/accelerate_decelerate_interpolator">
+<set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:fromXDelta="0"
         android:toXDelta="100%p"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:duration="@android:integer/config_shortAnimTime"/>
     <translate
         android:fromYDelta="0"
         android:toYDelta="100%p"
+        android:interpolator="@android:anim/accelerate_decelerate_interpolator"
         android:duration="@android:integer/config_shortAnimTime"/>
     <alpha
         android:fromAlpha="1.0"
