--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -28,6 +28,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerInParent="true"
         android:paddingEnd="4dp"
+        android:minHeight="?android:listPreferredItemHeight"
         android:layout_toStartOf="@id/story_image"
         android:orientation="vertical">
 
@@ -49,7 +50,8 @@
             android:layout_marginBottom="4dp"
             android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
-            android:maxLines="5"
+            android:maxLines="3"
+            android:visibility="gone"
             android:text="@string/app_name"
             style="@style/TextAppearance.Body"/>
     </LinearLayout>
