--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:windowActionBarOverlay">true</item>
     </style>
     <style name="ReaderTheme" parent="AppTheme" >
-        <item name="android:windowActionBarOverlay">false</item>
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
     <style name="EditFeedTheme" parent="AppTheme" >
         <item name="isFloatingWindow">true</item>
