--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -54,6 +54,18 @@
             android:visibility="gone"
             android:text="@string/app_name"
             style="@style/TextAppearance.Body"/>
+
+        <TextView
+            android:id="@+id/story_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="4dp"
+            android:singleLine="true"
+            android:visibility="gone"
+            android:text="@string/app_name"
+            style="@style/TextAppearance.Body"/>
     </LinearLayout>
 
 </RelativeLayout>
