--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -22,6 +22,7 @@
             android:layout_height="wrap_content"
             style="@style/TextAppearance.Reader.Title"
             android:layout_marginBottom="8dp"
+            android:textIsSelectable="true"
             android:text="@string/title"/>
 
         <TextView
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             style="@style/TextAppearance.Reader.Body"
+            android:textIsSelectable="true"
             android:text="@string/hello_world"/>
     </LinearLayout>
 
