Expandablelist adapter for tags and unread count
Signed-off-by: Jonas Kalderstam <jonas@kalderstam.se>

--- a/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
+++ b/app/src/main/res/layout/navdrawer_for_ab_overlay.xml
@@ -33,10 +33,11 @@
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent"/>-->
 
-    <ListView
+    <ExpandableListView
         android:id="@+id/navdrawer_list"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:scrollbars="vertical"
+
         android:background="@color/navdrawer_background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
