--- a/app/src/main/res/layout/activity_edit_feed.xml
+++ b/app/src/main/res/layout/activity_edit_feed.xml
@@ -15,6 +15,8 @@
         style="@style/TextAppearance.Title"
         android:layout_width="match_parent"
         android:singleLine="true"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="2dp"
         android:layout_height="wrap_content" />
 
     <EditText
@@ -23,13 +25,28 @@
         style="@style/TextAppearance.Title"
         android:layout_width="match_parent"
         android:singleLine="true"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:layout_height="wrap_content" />
+
+    <EditText
+        android:id="@+id/feed_tag"
+        android:hint="@string/tag"
+        style="@style/TextAppearance.Title"
+        android:layout_width="match_parent"
+        android:singleLine="true"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:layout_height="wrap_content" />
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/add_rss_feed"
         android:id="@+id/add_button"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="4dp"
         android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
