--- a/app/src/main/res/layout/fragment_reader.xml
+++ b/app/src/main/res/layout/fragment_reader.xml
@@ -25,10 +25,11 @@
             android:textIsSelectable="true"
             android:text="@string/title"/>
 
-        <TextView
+        <com.nononsenseapps.feeder.views.LinkedTextView
             android:id="@+id/story_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="300dp"
             android:layout_marginTop="8dp"
             style="@style/TextAppearance.Reader.Body"
             android:textIsSelectable="true"
