--- a/app/src/main/res/layout/view_story.xml
+++ b/app/src/main/res/layout/view_story.xml
@@ -10,16 +10,23 @@
                 android:layout_height="wrap_content"
                 android:minHeight="?android:listPreferredItemHeight">
 
-    <ImageView
-        android:id="@+id/story_image"
-        android:layout_width="?android:listPreferredItemHeight"
+    <!-- To get symmetrical padding if image is invisible -->
+    <FrameLayout
+        android:id="@+id/right_padding"
+        android:layout_width="wrap_content"
+        android:minWidth="@dimen/keyline_1"
         android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:visibility="visible"
-        android:src="@drawable/bacon"
         android:layout_alignTop="@+id/story_text"
         android:layout_alignBottom="@+id/story_text"
-        android:layout_alignParentEnd="true"/>
+        android:layout_alignParentEnd="true">
+        <ImageView
+            android:id="@+id/story_image"
+            android:layout_width="?android:listPreferredItemHeight"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            android:src="@drawable/bacon"/>
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/story_text"
@@ -29,19 +36,51 @@
         android:layout_centerInParent="true"
         android:paddingEnd="4dp"
         android:minHeight="?android:listPreferredItemHeight"
-        android:layout_toStartOf="@id/story_image"
+        android:layout_toStartOf="@id/right_padding"
         android:orientation="vertical">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/story_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginStart="2dp"
+                android:singleLine="true"
+                android:visibility="visible"
+                android:layout_alignParentEnd="true"
+                android:text="2014-04-12 17:12"
+                style="@style/TextAppearance.ListItem.Author"/>
+            <TextView
+                android:id="@+id/story_author"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="2dp"
+                android:singleLine="true"
+                android:visibility="visible"
+                android:layout_alignParentStart="true"
+                android:layout_toStartOf="@id/story_date"
+                android:text="SuperDuperFeedWithVeryLongAddressIOnded.com"
+                style="@style/TextAppearance.ListItem.Author"/>
+            </RelativeLayout>
 
         <TextView
             android:id="@+id/story_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="2dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
-            android:text="@string/hello_world"
+            android:text="A long text that is supposed to touch the end of the line"
             android:maxLines="5"
-            style="@style/TextAppearance.Title"/>
+            style="@style/TextAppearance.Title"
+            />
 
         <TextView
             android:id="@+id/story_body"
@@ -51,18 +90,6 @@
             android:layout_marginTop="2dp"
             android:layout_marginEnd="4dp"
             android:maxLines="3"
-            android:visibility="gone"
-            android:text="@string/app_name"
-            style="@style/TextAppearance.Body"/>
-
-        <TextView
-            android:id="@+id/story_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginEnd="4dp"
-            android:singleLine="true"
             android:visibility="gone"
             android:text="@string/app_name"
             style="@style/TextAppearance.Body"/>
